# Bantu

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  QUICKSTART.md  README.md  bantu  bantu-vscode-1.2.2.vsix  dev.sh  docker-compose.dev.yml  server.b
.github/workflows/: release.yml
bantu-src/compiler/: CMakeLists.txt  build-mac.sh  build.sh
bantu-src/compiler/src/: ast.cpp  ast.hpp  class.hpp  environment.hpp  evaluator.hpp  function.hpp  lexer.cpp  lexer.hpp  linter.hpp  main.cpp  parser.hpp  server.hpp  template.hpp  types.cpp  types.hpp
bantu-src/compiler/stubs/: ios_base_library_initv.c
docs/: language-features.md  orm.md  v1.3.0-status.md
lib/: orm.b
orm/: orm.b  orm_test.b  package.json
public/: call.html
public/css/: styles.css
public/js/: api.js
samples/orm-demo/: main.b
samples/pos-system/: README.md  bantu.json  db.b  routes.b  schema.sql  server.b
samples/pos-system/public/: dashboard.html  index.html  products.html  sales.html
samples/pos-system/public/css/: style.css
samples/pos-system/public/js/: app.js  dashboard.js  pos.js  products.js  sales.js
samples/webrtc-chat/: server.b
scripts/installers/: README.md  bantu.wxs  build-macos-pkg.sh  build-windows-msi.ps1  install.ps1  install.sh
tests/: const_bad.b  lang_test.b
vscode-extension/: package.json
vscode-extension/src/: diagnosticsProvider.ts  extension.ts
